connect frontend to backend

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -42,6 +42,7 @@
             <div id="errorMessage" style="color: red; margin-top: 1rem; text-align: center; display: none;"></div>
         </div>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/auth.js"></script>
     <script>
