--- a/frontend/project-details.html
+++ b/frontend/project-details.html
@@ -59,6 +59,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/projects.js"></script>
     <script src="js/profile-search.js"></script>
