--- a/frontend/create-project.html
+++ b/frontend/create-project.html
@@ -78,6 +78,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script>
         // Initialize
