--- a/frontend/forgot-password.html
+++ b/frontend/forgot-password.html
@@ -54,6 +54,7 @@
             <div id="successMessage" style="color: green; margin-top: 1rem; text-align: center; display: none;"></div>
         </div>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/auth.js"></script>
 </body>
