--- a/frontend/notifications.html
+++ b/frontend/notifications.html
@@ -45,6 +45,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/profile-search.js"></script>
     <script>
