--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -167,6 +167,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/profile.js"></script>
     <script src="js/profile-search.js"></script>
